--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 <section id="skills">
   <h2>Technical Skills</h2>
   <div class="skills">
-    <span>Python</span><span>Java</span><span>C++</span><span>SQL</span><span>HTML</span><span>CSS</span><span>JavaScript</span>
-    <span>Oracle Fusion HCM</span><span>Core HR</span><span>Absence</span><span>Benefits</span>
+    <span>Artificial Intelligence</span><span>Agentic AI</span><span>Python</span><span>Java</span><span>C++</span><span>SQL</span><span>HTML</span><span>CSS</span><span>JavaScript</span>
+    <span>Oracle Fusion HCM</span><span>Core HR Module</span><span>Absence Module</span><span>Benefits Module</span>
   </div>
 </section>
 
