--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     #chatbot-container {
   position: fixed;
   bottom: 20px;
-  left: 20px;
+  right: 20px;
   width: 320px;
   font-family: Arial, sans-serif;
   box-shadow: 0 8px 24px rgba(0,0,0,0.15);
